@@ -4,7 +4,7 @@
 
 {% block content %}
 	{% if category %}
-	<h2 class="pagetitle">Archive for {{ category.name }}</h2>
+	<h2 class="pagetitle">Archive for {{ category.title }}</h2>
 	{% endif %}
 	{% if year %}
 	<h2 class="pagetitle">Archive for {{ year }} {{ month }}</h2>
